--- a/src/index.css
+++ b/src/index.css
@@ -729,7 +729,6 @@ justify-content: flex-start;
 }
 
 .flex-image-text div {
-  /* border: 1px solid green; */
   padding-right: 0.9em;
 }
 
@@ -750,8 +749,8 @@ min-width: 50%;
 height: auto; 
 }
 
-.flex-container-2.subheader h3, .subheader div {
-  margin-top: 0.6em;
+.flex-container-2.subheader h3 {
+  margin-top: 0em;
 }
 
 
@@ -775,6 +774,10 @@ height: auto;
 
 .flex-container-2.subheader {
   margin-top: 0.6em;
+}
+
+.flex-image-text > div {
+  padding-right: 0em;
 }
 }
 
@@ -1287,7 +1290,7 @@ background-color: #1ba0f2;
 @media(max-width: 767px){
 .footer-col{
   width: 50%;
-  margin-bottom: 1.9em;
+  margin: auto 1em;
 }
 }
 @media(max-width: 574px){
@@ -1448,7 +1451,6 @@ width: 25%;
 
 .date {
 background-color: rgba(211, 211, 211, 0.2005);
-/*border: 1px solid #1ba0f220;*/
 padding: 0.6em;
 border-radius: 0.4em;
 user-select: none;
@@ -1554,6 +1556,15 @@ align-items: center;
 
 .flex-container-2 > .flex-container-2 {
   padding-right: 0;
+  margin-top: 0;
+}
+
+@media (max-width: 800px) { 
+  .flex-container-2.subheader h3 {
+    margin-top: 0.6em;
+    margin-bottom: 0.6em;
+    margin-right: 0.2em;
+  }
 }
 
 .flex-container-2 > .openhrs > .flex-container-2 > .when {
@@ -1793,11 +1804,11 @@ color: rgba(0, 0, 0, 0.25);
     content: '';
     position: absolute;
     width: 0;
-    height: 0.07em;
+    height: 0.12em;
     bottom: 0;
     left: 0;
     top: 1.5em;
-    background-color: #333;
+    background-color: #1BA0F2;
     animation: underlineAppearThenDisappear 3s forwards;
 }
 
