Add hover curso pointer to nextarticles

--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,10 @@ button {
   user-select: none;
 }
 
+.button:hover{
+  cursor: pointer;
+}
+
 .button-design {
   border: none;
   display: inline-block;
