--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   background-color: #E6F5FD;
   background: linear-gradient(0, #d6edf9, #E6F5FD); 
   color: #443c3e;
+  margin: auto;
+  overflow-x: hidden;
+  /* border: 0.05em solid #1ba0f220; */
 }
 
 @media screen and (min-width: 800px) {
@@ -324,7 +327,6 @@ padding-right: 5%;
   top: 100%;
   left: 0;
   background-color: #E6F5FD;
-  z-index: 1;
   list-style-type: none;
   padding-left: 0;
   box-shadow: 0px 0px 0.6em rgba(0, 0, 0, 0.2);
@@ -334,6 +336,7 @@ padding-right: 5%;
   border-left: 0.08em solid #1ba0f2;
   border-bottom: 0.08em solid #1ba0f2;
   border-right: 0.08em solid #1ba0f2;
+  z-index: 3;
 }
 
 .submenu > li > a {
@@ -462,6 +465,74 @@ img {
 .logo img {
   width: 75%;
 }
+
+.home-image {
+  min-width: 100vw;
+  overflow-x: hidden;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 0.3em solid #1ba0f220;
+  position: relative;
+}
+
+.home-image img {
+  min-width: 100vw;
+  height: auto;
+
+}
+
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right, #1ba0f2, rgba(0, 0, 0, 0.5) 50%);
+  z-index: 1; /* Ensures it's above the image, but below the text */
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+
+.overlay-text {
+  position: absolute; 
+  top: 48%;
+  left: 8.5%;
+  transform: translate(-20%, -50%);
+  font-size: 1.8vw; 
+  color: white;
+  z-index: 2;
+  user-select: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* box-shadow: 0 0.1em 0.2em rgba(0, 0, 0, 0.6); */
+  padding: 0.8em;
+  line-height: 1.35;
+  border-radius: 0.2em;
+
+  animation-name: fadeIn;
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
+}
+
+/* .overlay-text:hover {
+  box-shadow: 0 0.15em 0.3em rgba(0, 0, 0, 1.1);
+} */
+  
+  @media(max-width: 800px) {
+    .overlay-text {
+      font-size: 2.3vw; 
+      /* top: 48%;
+      left: 8.5%; */
+      box-shadow: 0 0 0;
+    }
+  }
+
+  /* ------------------------- */
 
 .slideshow {
     width: 100%;
@@ -633,6 +704,11 @@ img {
   cursor: default;
   box-shadow: var(--timelineCardBoxShadow, 0 0.1em 0.2em 0 rgba(0, 0, 0, .12), 0 0.1em 0.2em 0 rgba(0, 0, 0, .24));
 }  
+
+.article:hover .div-readmore, .article-card:hover .div-readmore {
+  transform: scale(1.05);
+}
+
 
 .article-click {
   background-color: white;
@@ -1148,6 +1224,10 @@ user-select: none;
 border: 0.2em solid #1ba0f220;
 background-color: #e6f5fd;
 cursor: pointer;
+}
+
+.div-back i {
+  cursor: pointer;
 }
 
 .div-back a {
