--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,32 @@ label {
   }
 }
 
+.file-upload-parent {
+  font-size: 0.8em;
+}
 
+.file-upload-input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-upload-button {
+  display: inline-block;
+  cursor: pointer;
+
+  padding: 0.5em;
+  border: 0.05em solid rgb(237, 237, 237);
+  display: inline-block;
+  border-radius: 0.15em;
+}
+
+.file-upload-button:hover {
+  background-color: rgb(217, 216, 216);
+}
 
 .btn {
   padding: 1.3em;
@@ -822,6 +847,11 @@ select:focus {
 input + input, input + select, select + input, select + select {
   border-left: none;
   margin-top: 0.5em;
+}
+
+input.amountNumber {
+  width: 2em;
+  text-align: center;
 }
 
 
@@ -1774,6 +1804,7 @@ user-select: none;
   font-size: 0.8em;
 }
 
+
 /* -------------------------- */
 
 .partners {
@@ -1947,6 +1978,7 @@ color: rgba(0, 0, 0, 0.25);
 .counter input {
   max-width: 3em;
   text-align: center;
+  margin-bottom: 0.3em;
 }
 
 
@@ -2072,6 +2104,7 @@ color: rgba(0, 0, 0, 0.25);
   padding: 0.5em 0.5em;
   border-radius: 0.3em;
   margin: 0;
+  user-select: none;
 }
 
 .status-published {
