--- a/src/index.css
+++ b/src/index.css
@@ -1800,6 +1800,16 @@ justify-content: center;
 margin-right: 0.3em;
 }
 
+.mylink-coach {
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.coach:hover, .coach i:hover {
+  cursor: pointer;
+}
+
+
 .openhrs {
 margin: 0.3em 0.3em 0.6em 0;
 color: rgba(51, 51, 51, 0.785);
