--- a/src/index.css
+++ b/src/index.css
@@ -483,6 +483,10 @@ img {
   text-align: center;
 }
 
+.side-vision p {
+  margin: 0.7em 0;
+}
+
 .logo {
   width: 100%;
   display: flex; 
@@ -1377,7 +1381,7 @@ user-select: none;
 .container-footer{
 max-width: 73em;
 margin: auto;
-line-height: 1.5;
+line-height: 1.3;
 }
 
 .container-row{
@@ -1395,62 +1399,65 @@ box-sizing: border-box;
 .footer{
 background-color: rgba(0, 0, 0, 0.8);
 padding-top: 1.2em;
-padding-bottom: 2.5em;
 user-select: none;
 }
 
-.footer-col{
+.footer-col {
  width: 25%;
- padding: 0 0.9em;
+ margin: 0 auto;
+ padding: 0em;
+ text-align: center;
 }
 
 .footer-col h4{
-font-size: 1em;
-color: #ffffff;
-text-transform: capitalize;
-margin-bottom: 2.2em;
-font-weight: 500;
-position: relative;
+  font-size: 1em;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 2.2em;
+  font-weight: 500;
+  position: relative;
 }
 
 .footer-col h4::before{
-content: '';
-position: absolute;
-left:0;
-bottom: -0.6em;
-background-color: #1ba0f2;
-height: 0.1em;
-box-sizing: border-box;
-width: 3.1em;
+  content: '';
+  position: absolute;
+  left:50%;
+  bottom: -0.8em;
+  background-color: #1ba0f2;
+  height: 0.1em;
+  box-sizing: border-box;
+  width: 3.1em;
+  transform: translateX(-50%); 
 }
 
 .footer-col ul li:not(:last-child){
-margin-bottom: 0.6em;
+  margin-bottom: 0.6em;
 }
 
 .footer-col ul li a{
-font-size: 0.9em;
-text-transform: capitalize;
-color: #ffffff;
-text-decoration: none;
-font-weight: 300;
-color: #bbbbbb;
-display: block;
-transition: all 0.3s ease;
-margin-bottom: 1em;
+  font-size: 0.9em;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+  margin-bottom: 1em;
 }
 
 
 .footer-col ul li p {
-font-size: 0.9em;
-color: #bbbbbb;
-margin-top: 0.3em;
+  font-size: 0.9em;
+  color: #bbbbbb;
+  margin-top: 0.3em;
 }
 
 .footer-col ul li .developed {
-line-height: 0;
-font-size: 0.6em;
-margin-top: 2em;
+  line-height: 0;
+  font-size: 0.6em;
+  margin-top: 2em;
+  margin-bottom: 0;
 }
 
 .footer-col ul li .adminLoginLink {
@@ -1461,9 +1468,9 @@ margin-top: 2em;
 }
 
 .footer-col ul li a:hover{
-color: #1ba0f2;
-padding-left: 0.5em;
-cursor: pointer;
+  color: #1ba0f2;
+  padding-left: 0.5em;
+  cursor: pointer;
 }
 
 .footer-col .social-links a{
@@ -1471,7 +1478,7 @@ display: inline-block;
 height: 2.5em;
 width: 2.5em;
 background-color: #bbbbbb;
-margin:0 0.6em 0.6em 0;
+margin:0 0.3em 0.6em 0.3em;
 text-align: center;
 line-height: 2.5em;
 border-radius: 50%;
@@ -1483,19 +1490,55 @@ transition: all 0.5s ease;
 background-color: #1ba0f2;
 }
 
-.orgnr {
-  font-size: 0.8em;
-  white-space: nowrap;
-  display: block;
+.footer-end {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  color: grey;
+  margin-top: 1em;
+  padding: 1em 0.3em;
+  flex-wrap: wrap;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
-/*responsive*/
+.footer-item {
+  width: 33%;
+  font-size: 0.7em;
+  text-align: center;
+}
+
+.footer-item.center {
+  white-space: pre-line;
+}
+
+.footer-item.center .separator {
+  display: inline-block; /* Show the separator */
+  margin: 0 0.5em; /* Add some space around the separator */
+}
+
+.item-block {
+  display: block; 
+}
+
+
 @media(max-width: 767px){
 .footer-col{
   width: 50%;
   margin: auto 1em;
+  text-align: left;
+}
+
+.footer-col h4::before{
+  left:1.5em;
+  transform: translateX(-50%); 
+  }
+
+.footer-item {
+  width: 100%;
+  margin: 0.5em auto;
 }
 }
+
 @media(max-width: 574px){
 .footer-col{
   width: 100%;
