--- a/src/index.css
+++ b/src/index.css
@@ -716,6 +716,15 @@ img {
   padding: 0 0.5em;
 }
 
+.column-2 {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 1em;
+  padding: 0 1em;
+}
+
+
+
 @media screen and (max-width: 700px) {
   .row {   
     flex-direction: column;
@@ -804,6 +813,75 @@ img {
   border: 0.2em solid #1ba0f220;
   user-select: none;
 }
+
+.program-card {
+  flex: 33.33%;
+  padding: 0.3em;
+  margin: 1em 0em;
+  background-color: white;
+  margin-bottom: 0;
+}
+
+.program-card:hover {
+  cursor: pointer;
+}
+
+.program-card span:hover {
+  cursor: pointer;
+}
+
+.program-card h3 {
+  margin-left: 0.5em;
+  cursor: pointer;
+}
+
+.program-card i {
+  cursor: pointer;
+}
+
+.program-img {
+  width: 100%; /* Adjust if necessary */
+  height: auto; /* Keep the aspect ratio */
+  display: block; /* Remove extra space below the image */
+  cursor: pointer;
+}
+
+.programsTxt {
+  margin: 1em;
+}
+
+@media screen and (max-width: 800px) {
+  .program-card {
+    flex: 0 0 100%;
+  }
+
+  .program-card h3 {
+    padding-top: 0.8em;
+  }
+
+  .column-2 {
+    width: 50%;
+  }
+
+}
+
+@media screen and (max-width: 500px) {
+
+  .column-2 {
+    width: 100%;
+  }
+
+}
+
+.program-card .flex-container-2 {
+  margin-bottom: 1em;
+}
+
+.program-card .flex-container-2 span {
+  margin-top: 0.8em;
+  margin-left: 0.3em;
+}
+
 
 /* Fake image, just for this example */
 .fakeimg {
